# MiLAB-Cheetah-Software

./: .gitignore  CMakeLists.txt  README.md
common/include/: cppTypes.h
common/include/ControlParameters/: ControlParameters.h  RobotParameters.h  SimulatorParameters.h
common/include/Controllers/: DesiredStateCommand.h  GaitScheduler.h  LegController.h  StateEstimatorContainer.h
common/include/Dynamics/: Cheetah3.h  Milab.h  Milab_0314.h  MiniCheetah.h  Quadruped.h
common/include/SimUtilities/: IMUTypes.h  ImuSimulator.h  SimulatorMessage.h  SpineBoard.h
common/test/: test_ControlParameters.cpp  test_ImuSimulator.cpp  test_dynamics.cpp
config/: cheetah-3-defaults.yaml  default-simulator-parameters.yaml  default-terrain.yaml  default-user-parameters-file.yaml  initial_jpos_ctrl.yaml  jpos-user-parameters.yaml  lowlevel-user-parameters.yaml  milab-defaults.yaml  milab-robot-parameters.yaml  milab-user-parameters.yaml  mini-cheetah-defaults.yaml
debug_data/: leg_controller_plot.py  positive_matrix_check.py
debug_tools/: leg_controller_data.txt  leg_controller_plot.py
debug_tools/lcm-log2smat/: CMakeLists.txt
documentation/: ChangeController.md  getting_started.md  qt_install.md  realrobot_opertion_guide.md  running_real_robot.md  sim_example.md  simulation_opertion_guide.md
googletest/googletest-build/: CTestTestfile.cmake  Makefile  cmake_install.cmake
googletest/googletest-download/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
googletest/googletest-mc/: .gitignore
lcm-types/: lowlevel_cmd.lcm  lowlevel_state.lcm
rc_test/: rc_test_main.cpp
robot/include/: HardwareBridge.h  RobotRunner.h  main_helper.h
robot/src/: HardwareBridge.cpp  JPosInitializer.cpp  RobotRunner.cpp  SimulationBridge.cpp  main_helper.cpp
scripts/: README.md  back_googletest.sh  get_data_back.sh  make_types.sh  run_mc.sh  run_mc_2.sh  run_milab.sh  run_test_common.sh  send_to_milab_cheetah.sh  ssh_robot.sh
scripts/milab_scripts/: send_to_milab_cheetah.sh
sim/: CMakeLists.txt
sim/include/: Colors.h  DrawList.h  Graphics3D.h  SimControlPanel.h  Simulation.h  ui_JoystickTest.h  ui_MiniCheetahDebug.h  ui_SimControlPanel.h
sim/src/: DrawList.cpp  GameController.cpp  Graphics3D.cpp  MiniCheetahDebug.cpp  MiniCheetahDebug.ui  RobotInterface.cpp  SimControlPanel.cpp  SimControlPanel.ui  Simulation.cpp  sim_utilities.cpp
spine/: main.cpp
user/: CMakeLists.txt  ChangeController.md  README.md
user/MIT_Controller/: MIT_UserParameters.h
user/MiLAB_Controller/: CMakeLists.txt  MiLAB_Controller.cpp  MiLAB_Controller.hpp  MiLAB_UserParameters.h  main.cpp
user/MiLAB_JPos_Controller/: JPosUserParameters.h  JPos_Controller.cpp  JPos_Controller.hpp
user/MiLAB_Lowlevel_Controller/: CMakeLists.txt  LowLevelUserParameters.h  Lowlevel_Controller.cpp  Lowlevel_Controller.hpp  main.cpp  python_ctrl_eaxmple.py
user/MiLAB_Lowlevel_Controller/exlcm/: __init__.py  lowlevel_cmd.py  lowlevel_state.py
user/MiLAB_Spi_Controller/: CMakeLists.txt  MiLAB_Spi_Controller.cpp  MiLAB_Spi_Controller.h  SpiUserParameters.h  main.cpp
user/MiniCheetahSpi_Controller/: CMakeLists.txt
(+93 files in other folders)
